kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-shop
  template:
    metadata:
      labels:
        app: e-shop
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: e-shop
        image: registry.gitlab.com/your-namespace/e-shop:latest
        ports:
        - containerPort: 80
